solved a bug and fixed routes
